--- a/css/style.css
+++ b/css/style.css
@@ -534,4 +534,32 @@ background: var(--accent-color);
   fill: currentColor;
 }
 /* owerlay */
-
+.overlay-container {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  font-family: var(--first-font-family);
+  color: var(--second-title-color);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 63px;
+  padding-bottom: 63px;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 500ms linear;
+}
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
+  transform: translateY(0%);
+}
