--- a/css/style.css
+++ b/css/style.css
@@ -557,9 +557,30 @@ background: var(--accent-color);
   background: rgba(33, 150, 243, 0.9);
   overflow: auto;
   transform: translateY(100%);
-  transition: transform 500ms linear;
+  transition: transform 350ms linear;
 }
 .portfolio-link:hover .overlay,
 .portfolio-link:focus .overlay {
   transform: translateY(0%);
+}
+.about-list-item {
+  position: relative;
+}
+.about-overlay {
+  font-family: var(--first-font-family);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--second-title-color);
+  background: rgba(47, 48, 58, 0.8);
+  width: 100%;
+  height: 70px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
 }
