--- a/css/style.css
+++ b/css/style.css
@@ -557,7 +557,7 @@ background: var(--accent-color);
   background: rgba(33, 150, 243, 0.9);
   overflow: auto;
   transform: translateY(100%);
-  transition: transform 350ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover .overlay,
 .portfolio-link:focus .overlay {
@@ -583,4 +583,43 @@ background: var(--accent-color);
   position: absolute;
   bottom: 0%;
   right: 0%;
+}
+/* MODAL-WINDOW */
+.backdrop {
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background: #FFFFFF;
+  border-radius: 4px 4px 4px 4px;
+}
+.backdrop-modal-button {
+position: absolute;
+top: 8px;
+right: 8px;
+width: 30px;
+height: 30px;
+border-radius: 50%;
+border: 1px solid rgba(0, 0, 0, 0.1);
+justify-content: center;
+align-items: center;
+color: #000;
+cursor: pointer;
+}
+.modal-button-svg {
+  fill: currentColor;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
 }
