--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.01em;
   text-transform: uppercase;
   margin-bottom: 10px;
 
@@ -622,4 +622,5 @@ cursor: pointer;
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
+  pointer-events: none;
 }
