--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-color);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list-link:hover,
 .nav-list-link:focus {
@@ -122,7 +122,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--content-color);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact:hover,
 .contact:focus {
@@ -189,7 +189,7 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button:hover,
 .modal-button:focus {
@@ -338,7 +338,7 @@ body {
   color: var(--second-content-color);
   border-radius: 4px;
   border: solid 1px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .progect-link:hover,
 .progect-link:focus {
@@ -350,7 +350,6 @@ body {
 }
 .progect-svg {
   fill: currentColor;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*=====END MAIN=====*/
 /*=====START FOOTER=====*/
@@ -380,7 +379,7 @@ body {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   color: var(--second-title-color);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-address-link:hover,
 .footer-address-link:focus {
@@ -393,7 +392,7 @@ body {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-mail-link:hover,
 .footer-mail-link:focus {
@@ -407,7 +406,7 @@ body {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-tel-link:hover,
 .footer-tel-link:focus {
@@ -427,6 +426,7 @@ body {
 }
 .soc-link-footer {
   background-color: rgba(255, 255, 255, 0.1);
+  transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*=====END FOOTER=====*/
 /*=====START PAGE PORTFOLIO=====*/
@@ -445,7 +445,7 @@ body {
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color, box-shadow, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .selection-btn:hover,
 .selection-btn:focus {
@@ -529,7 +529,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: center;
   border-radius: 50%;
   color: var(--second-content-color);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-item:not(:last-child) {
 margin-right: 10px;
@@ -606,6 +606,7 @@ background: var(--accent-color);
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
+  transition: opacity, visibility 700ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
@@ -616,6 +617,7 @@ background: var(--accent-color);
   height: 581px;
   background: #FFFFFF;
   border-radius: 4px 4px 4px 4px;
+  transition: opacity, visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop-modal-button {
 position: absolute;
