--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list-link:hover,
 .nav-list-link:focus {
@@ -122,7 +123,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--content-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact:hover,
 .contact:focus {
@@ -139,7 +141,6 @@ body {
   align-self: center;
   fill: currentColor;
   margin-right: 10px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*=====END HEADER=====*/
 /*=====START MAIN=====*/
@@ -189,7 +190,8 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button:hover,
 .modal-button:focus {
@@ -338,7 +340,9 @@ body {
   color: var(--second-content-color);
   border-radius: 4px;
   border: solid 1px;
-  transition: color, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .progect-link:hover,
 .progect-link:focus {
@@ -379,7 +383,8 @@ body {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   color: var(--second-title-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-address-link:hover,
 .footer-address-link:focus {
@@ -392,7 +397,8 @@ body {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-mail-link:hover,
 .footer-mail-link:focus {
@@ -406,7 +412,8 @@ body {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-tel-link:hover,
 .footer-tel-link:focus {
@@ -426,7 +433,8 @@ body {
 }
 .soc-link-footer {
   background-color: rgba(255, 255, 255, 0.1);
-  transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*=====END FOOTER=====*/
 /*=====START PAGE PORTFOLIO=====*/
@@ -445,7 +453,10 @@ body {
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
-  transition: color, box-shadow, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .selection-btn:hover,
 .selection-btn:focus {
@@ -507,7 +518,8 @@ body {
   border-bottom: 1px solid #eeeeee;
 }
 .portfolio-link {
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: 
+box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
@@ -529,7 +541,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   align-items: center;
   border-radius: 50%;
   color: var(--second-content-color);
-  transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-item:not(:last-child) {
 margin-right: 10px;
@@ -571,7 +584,8 @@ background: var(--accent-color);
   background: rgba(33, 150, 243, 0.9);
   overflow: auto;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 
+  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover .overlay,
 .portfolio-link:focus .overlay {
@@ -606,7 +620,9 @@ background: var(--accent-color);
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
-  transition: opacity, visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
